--- a/css/style.css
+++ b/css/style.css
@@ -53,14 +53,14 @@ and centers the contents inside the rest
 but only if there is non-header content on the page.
 If it's just a header, it gets centered in the middle of the page.
 */
-section:has(> .slide-content > div) {
+section:has(> .slide-content > :not(aside)) {
     display: flex !important;
     flex-direction: column;
     top: unset !important;
     height: 100%;
 }
 
-section .slide-content:has(> div) {
+section .slide-content:has(> :not(aside)) {
     margin-top: auto !important;
     margin-bottom: auto !important;
 }
