--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,8 @@ section .slide-content:has(> :not(aside)) {
 .reveal pre {
     box-shadow: none
 }
+
+table.noborder,
+table.noborder td,
+table.noborder th
+{ border: 0; }
